# financebench-rag-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  litellm_config.yaml  pyproject.toml
.github/workflows/: deploy.yml  eval.yml
docs/: api-reference.md  architecture.md  engineering-log.md  evaluation.md  rbac-matrix.md  setup.md
docs/research/: 01-evaluation-and-llms.md  02-production-roadmap.md  03-ui-framework-assessment.md  04-benchmarking-vs-literature.md  05-non-llm-retrieval-filters.md  06-failure-analysis.md  07-chunker-experiments.md
migrations/: env.py
migrations/versions/: 20260511_0001_create_roles_table.py  20260511_0002_seed_system_roles.py
scripts/: analyze_financebench_run.py  audit_failed_qs.py  build_grader_training_data.py  build_judge_calibration.py  build_pipeline_diagnostic.py  build_reranker_training_data.py  debug_01865.py  debug_03029.py  diff_financebench_runs.py  download_financebench.py  download_financebench_pdfs.py  download_sample_data.py  download_sec_filings.py  dual_judge_check.py  enrich_bm25_doc2query.py  eval_grader_lora.py  eval_grader_models_compare.py  export_calibration_to_md.py  export_pipeline_diagnostic_to_md.py  extract_sec_sections.py  generate_jwt.py  ingest_documents.py  ingest_financebench.py  ingest_financebench_docling.py  inspect_gold_chunks.py  label_gold_chunks.py  label_judge_calibration.py  parse_calibration_md.py  parse_pipeline_diagnostic_md.py  patch_cache_indices.py  reembed_collection.py  restart.sh  run_chunker_ab_gate.py  run_clean_mode_benchmark.py  run_devset.py  score_deepeval.py  score_patronus.py  seed_qdrant.py  shutdown.sh  smoke_abaci.py  (+13 more)
src/api/: dependencies.py  main.py
src/config/: prompts.py  rbac_config.py  settings.py
src/frontend/: gradio_app.py
src/graph/: builder.py  edges.py
src/ingestion/: chunker.py  docling_loader.py  metadata_extractor.py  pipeline.py  qdrant_uploader.py
src/models/: auth.py  schemas.py  state.py
src/services/: auth_service.py  candidate_validator.py  company_registry.py  cost_tracker.py  embeddings.py  guardrails_service.py  llm_factory.py  llm_retry.py  ltr_gate_service.py  multi_hyde.py  request_context.py  reranker_service.py  result_cache.py  roles_service.py  thread_service.py  vector_store.py
src/tools/: calculator.py
tests/: conftest.py
web/: .env.example  README.md  package-lock.json  package.json
web/src/: proxy.ts
(+142 files in other folders)
